2004-07-15  Phil Muldoon  <pmuldoon@redhat.com>

	* customTargets.xml: Fixed assemble target

2004-07-15  Rick Moseley  <rmoseley@redhat.com>

	* customTargets.xml: changed name of archive tarball
	* build.xml: changed version from 1.0.0 to 1.1

2004-07-15  Rick Moseley  <rmoseley@redhat.com>

	* customTargets.xml: Separate AllElements target 
	so that we can skip	fetching elements if they've 
	already been fetched (via a hacky property
	definition that can be passed on the command line). 
	Useful for SRPM building.

2004-07-14  Rick Moseley  <rmoseley@redhat.com>

	* customTargets.xml : fixed typo


2004-07-14  Rick Moseley <rmoseley@redhat.com>
 
	* Initial check-in. Added 
		maps/changelog.map
		build.properties
		customTargets.xml
		Changelog