@@ -1,3 +1,9 @@
+2004-11-11  Rick Moseley  <rmoseley@redhat.com>
+
+	* rpm.map: added propertypage
+	* build.xml: removed "target name" stuff, not required for
+	   new building process
+
 2004-07-15  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* customTargets.xml: Fixed assemble target
